--- a/RTSFramework/RTSFramework.GUI/packages.config
+++ b/RTSFramework/RTSFramework.GUI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="2.0.3" targetFramework="net461" />
   <package id="Microsoft.Build" version="15.6.82" targetFramework="net461" />
   <package id="Microsoft.Build.Framework" version="15.6.82" targetFramework="net461" />
   <package id="Microsoft.Build.Tasks.Core" version="15.6.82" targetFramework="net461" />
@@ -12,6 +13,8 @@
   <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.7.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.7.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.7.0" targetFramework="net461" />
+  <package id="Prism.Core" version="7.0.0.396" targetFramework="net461" />
+  <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
