Disabled configuration UI during run

--- a/RTSFramework/RTSFramework.GUI/RTSFramework.GUI.csproj
+++ b/RTSFramework/RTSFramework.GUI/RTSFramework.GUI.csproj
@@ -256,6 +256,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\BooleanNegationConverter.cs" />
     <Compile Include="Converters\VisibilityConverter.cs" />
     <Compile Include="DependencyInjection\UnityProvider.cs" />
     <Compile Include="Utilities\DialogService.cs" />
