--- a/RTSFramework/RTSFramework.Core/RTSFramework.Core.csproj
+++ b/RTSFramework/RTSFramework.Core/RTSFramework.Core.csproj
@@ -95,6 +95,7 @@
     <Compile Include="RTSApproach\RTSApproachBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\DebugStopWatchTracker.cs" />
+    <Compile Include="Utilities\ProcessExtensions.cs" />
     <Compile Include="Utilities\RelativePathHelper.cs" />
   </ItemGroup>
   <ItemGroup>
