--- a/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
+++ b/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
@@ -93,6 +93,7 @@
   <ItemGroup>
     <Compile Include="Adapter\CancelableArtefactAdapter.cs" />
     <Compile Include="DeltaDiscoverer\DiscoveryType.cs" />
+    <Compile Include="DeltaDiscoverer\IOfflineFileDeltaDiscoverer.cs" />
     <Compile Include="IFilesProvider.cs" />
     <Compile Include="Adapter\IArtefactAdapter.cs" />
     <Compile Include="Models\CoverageData.cs" />
@@ -110,8 +111,8 @@
     <Compile Include="DeltaDiscoverer\IOnlineDeltaDiscoverer.cs" />
     <Compile Include="Models\IProgramModel.cs" />
     <Compile Include="Models\ITestCase.cs" />
+    <Compile Include="RTSApproach\ImpactedTestEventArgs.cs" />
     <Compile Include="RTSApproach\IRTSApproach.cs" />
-    <Compile Include="RTSApproach\IRTSListener.cs" />
     <Compile Include="ITestsDiscoverer.cs" />
     <Compile Include="ITestProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
