--- a/RTSFramework/RTSFramework.Concrete.RTS/RTSFramework.RTSApproaches.Dynamic.csproj
+++ b/RTSFramework/RTSFramework.Concrete.RTS/RTSFramework.RTSApproaches.Dynamic.csproj
@@ -92,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DynamicRTSApproach.cs" />
+    <Compile Include="IDynamicRTSApproach.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetestAllApproach.cs" />
   </ItemGroup>
