--- a/RTSFramework/RTSFramework.Concrete.TFS2010/RTSFramework.Concrete.TFS2010.csproj
+++ b/RTSFramework/RTSFramework.Concrete.TFS2010/RTSFramework.Concrete.TFS2010.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LocalFilesProvider.cs" />
     <Compile Include="Models\TFS2010ProgramModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TFS2010ProgramModelProvider.cs" />
@@ -66,6 +67,10 @@
     <ProjectReference Include="..\RTSFramework.Contracts\RTSFramework.Contracts.csproj">
       <Project>{ED8744A8-1310-45B9-B2E4-93E1F70BCBCC}</Project>
       <Name>RTSFramework.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RTSFramework.Core\RTSFramework.Core.csproj">
+      <Project>{34343ADE-C3E0-423D-94B6-9D0400F498CB}</Project>
+      <Name>RTSFramework.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\RTSFramework.CSharp\RTSFramework.Concrete.CSharp.Core.csproj">
       <Project>{ECDB3480-0CF5-4DED-8118-046F41CD4743}</Project>
