--- a/RTSFramework/RTSFramework.ViewModels/RTSFramework.ViewModels.csproj
+++ b/RTSFramework/RTSFramework.ViewModels/RTSFramework.ViewModels.csproj
@@ -88,13 +88,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CSharpProgramModelFileRTSController.cs" />
+    <Compile Include="StateBasedController.cs" />
     <Compile Include="MainWindowViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunConfigurations\ProcessingType.cs" />
     <Compile Include="RunConfigurations\ProgramModelType.cs" />
     <Compile Include="RunConfigurations\RTSApproachType.cs" />
     <Compile Include="RunConfigurations\RunConfiguration.cs" />
+    <Compile Include="TestResultListViewItemViewModel.cs" />
     <Compile Include="UnityModelInitializer.cs" />
     <Compile Include="Utilities\IDialogService.cs" />
   </ItemGroup>
