--- a/RTSFramework/RTSFramework.Concrete.Reporting/RTSFramework.Concrete.Reporting.csproj
+++ b/RTSFramework/RTSFramework.Concrete.Reporting/RTSFramework.Concrete.Reporting.csproj
@@ -58,9 +58,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TestCaseListReporter.cs" />
+    <Compile Include="FileProcessingResult.cs" />
+    <Compile Include="IdentifiedTestsListReporter.cs" />
     <Compile Include="CsvTestsReporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestListResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RTSFramework.Contracts\RTSFramework.Contracts.csproj">
