--- a/RTSFramework/RTSFramework.Concrete.User/RTSFramework.Concrete.User.csproj
+++ b/RTSFramework/RTSFramework.Concrete.User/RTSFramework.Concrete.User.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IIntededChangesProvider.cs" />
+    <Compile Include="IntendedFileChangesProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserIntendedChangesDiscoverer.cs" />
   </ItemGroup>
