--- a/RTSFramework/RTSFramework.ViewModels/RTSFramework.ViewModels.csproj
+++ b/RTSFramework/RTSFramework.ViewModels/RTSFramework.ViewModels.csproj
@@ -89,6 +89,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\DeltaBasedController.cs" />
+    <Compile Include="IntendedChangesDialogViewModel.cs" />
+    <Compile Include="RunConfigurations\DiscoveryType.cs" />
     <Compile Include="RunStatus.cs" />
     <Compile Include="Controller\StateBasedController.cs" />
     <Compile Include="MainWindowViewModel.cs" />
