--- a/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
+++ b/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
@@ -92,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adapter\CancelableArtefactAdapter.cs" />
+    <Compile Include="ICSharpProgramArtefact.cs" />
     <Compile Include="IFilesProvider.cs" />
     <Compile Include="Adapter\IArtefactAdapter.cs" />
     <Compile Include="ITestProcessingResult.cs" />
