--- a/RTSFramework/RTSFramework.GUI/RTSFramework.GUI.csproj
+++ b/RTSFramework/RTSFramework.GUI/RTSFramework.GUI.csproj
@@ -277,6 +277,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\CommitComboboxItemConverter.cs" />
     <Compile Include="Converters\InverseBooleanConverter.cs" />
     <Compile Include="Converters\TestExecutionOutcomeImageConverter.cs" />
     <Compile Include="Converters\VisibilityConverter.cs" />
