No longer requires visual studio to be installed -> own vstest.console.exe

--- a/RTSFramework/RTSFramework.GUI/packages.config
+++ b/RTSFramework/RTSFramework.GUI/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.7.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.7.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.7.0" targetFramework="net461" />
+  <package id="Microsoft.TestPlatform" version="15.7.0" targetFramework="net461" />
   <package id="Prism.Core" version="7.0.0.396" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
