--- a/RTSFramework/RTSFramework.Concrete.CSharp.MSTest/packages.config
+++ b/RTSFramework/RTSFramework.Concrete.CSharp.MSTest/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.TestPlatform" version="15.7.0" targetFramework="net461" />
   <package id="Mono.Cecil" version="0.10.0" targetFramework="net461" />
-  <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="OpenCover" version="4.6.519" targetFramework="net461" />
 </packages>
