--- a/RTSFramework/RTSFramework.Concrete.RTS/RTSFramework.RTSApproaches.Dynamic.csproj
+++ b/RTSFramework/RTSFramework.Concrete.RTS/RTSFramework.RTSApproaches.Dynamic.csproj
@@ -91,10 +91,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DynamicRTSApproach.cs" />
+    <Compile Include="DynamicRTS.cs" />
     <Compile Include="IDynamicRTSApproach.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RetestAllApproach.cs" />
+    <Compile Include="RetestAll.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RTSFramework.Contracts\RTSFramework.Contracts.csproj">
