Restructuring of correspondence model creation part 2

--- a/RTSFramework/RTSFramework.Concrete.CSharp.MSTest/RTSFramework.Concrete.CSharp.MSTest.csproj
+++ b/RTSFramework/RTSFramework.Concrete.CSharp.MSTest/RTSFramework.Concrete.CSharp.MSTest.csproj
@@ -76,6 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\MSTestExectionResult.cs" />
+    <Compile Include="Models\MSTestExectionWithCodeCoverageResult.cs" />
     <Compile Include="Models\MSTestTestcase.cs" />
     <Compile Include="Models\MSTestTestResult.cs" />
     <Compile Include="MSTestConstants.cs" />
