--- a/RTSFramework/RTSFramework.Concrete.RTS/RTSFramework.RTSApproaches.Dynamic.csproj
+++ b/RTSFramework/RTSFramework.Concrete.RTS/RTSFramework.RTSApproaches.Dynamic.csproj
@@ -75,13 +75,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DynamicRTS.cs" />
+    <Compile Include="IProcessingResultWithCodeCoverage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RetestAll.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RTSFramework.Contracts\RTSFramework.Contracts.csproj">
       <Project>{ED8744A8-1310-45B9-B2E4-93E1F70BCBCC}</Project>
       <Name>RTSFramework.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RTSFramework.RTSApproaches.Core\RTSFramework.RTSApproaches.Core.csproj">
+      <Project>{6BE9B2B8-9548-44A9-AB98-583BC4C3962B}</Project>
+      <Name>RTSFramework.RTSApproaches.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\RTSFramework.RTSApproaches.Utilities\RTSFramework.RTSApproaches.CorrespondenceModel.csproj">
       <Project>{8E0E2C16-376E-4465-AF69-E1B300726080}</Project>
