--- a/RTSFramework/RTSFramework.RTSApproaches.Core/RTSFramework.RTSApproaches.Core.csproj
+++ b/RTSFramework/RTSFramework.RTSApproaches.Core/RTSFramework.RTSApproaches.Core.csproj
@@ -63,7 +63,7 @@
     <Compile Include="Contracts\ITestSelector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetestAllSelector.cs" />
-    <Compile Include="TestSelectorBase.cs" />
+    <Compile Include="TestSelectorWithDataStructure.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RTSFramework.Contracts\RTSFramework.Contracts.csproj">
