--- a/RTSFramework/RTSFramework.RTSApproaches.Core/RTSFramework.RTSApproaches.Core.csproj
+++ b/RTSFramework/RTSFramework.RTSApproaches.Core/RTSFramework.RTSApproaches.Core.csproj
@@ -59,6 +59,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\IDataStructureProvider.cs" />
+    <Compile Include="DataStructures\IntertypeRelationGraph.cs" />
+    <Compile Include="DataStructures\IntertypeRelationGraphNode.cs" />
     <Compile Include="ImpactedTestEventArgs.cs" />
     <Compile Include="Contracts\ITestSelector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
